Merged from 1.1.2 (#43)
* Removed snapshots

* update to use branch name as version

* update to use branch for docker tag

* update the docker to use branch as tag

* MOS-31256 : changed pom version to rc

* MOS-31256 : changed pom version to rc

* Publish all to maven

* Remove rc1

* MOSIP-8465 : updated push trigger for 1.1.1 (#24)

Co-authored-by: Monobikash Das <M1045447@mindtree.com>

* push trigger pointing for 1.1.1 branch

* Java 8 To Java 11 Migration (#26)

* Migrated to Java11

* docker file updated

* lombok version updated

* javax dependency added

Co-authored-by: Nagarjuna <Nagarjuna@host.docker.internal>

* Develop (#27)

* MOSIP-9233 : initial commit

* MOSIP-9233 : completed update and reprint flow

* MOSIP-9233 : completed update and reprint flow

* MOSIP-9233 : test cases

* MOSIP-9233 : test cases

* MOSIP-9233 : test cases

* MOSIP-9233 : updated pom versions

Co-authored-by: Monobikash Das <M1045447@mindtree.com>

* Update push_trigger.yml

* Update push_trigger.yml

* MOSIP-9566 : created 1.1.2

* MOSIP-8548 (#29)

* Created Credential Request api

* Added additional attribute in template

* added 1.1.2 in yml

* added 1.1.2 in yml (#30)

* added 1.1.2 in yml

* updated branch name

* Changed to getCertificate in idAuthServiceImpl (#31)

* Changed to getCertificate in idAuthServiceImpl

* Modified test cases

* MOSIP-9654  fixed

* MOSIP-9654 (#32)

* added 1.1.2 in yml

* MOSIP-9654  fixed

Co-authored-by: M1022006 <M1022006@A2ML18485.mindtree.com>

* Added additional attribute for notification template (#33)

* Added logger json encoder (#34)

Co-authored-by: ase-101 <>

* Packetmanagerintegration (#37)

* MOSIP-9233 : initial commit

* MOSIP-9233 : completed update and reprint flow

* MOSIP-9233 : completed update and reprint flow

* MOSIP-9233 : test cases

* MOSIP-9233 : test cases

* MOSIP-9233 : test cases

* MOSIP-9233 : updat