@@ -6,7 +6,7 @@
 
     <groupId>io.mosip.resident</groupId>
     <artifactId>resident-parent</artifactId>
-    <version>1.0.7</version>
+    <version>1.1.2</version>
     <packaging>pom</packaging>
     <name>resident</name>
     <description>Parent project of MOSIP Resident</description>
@@ -50,15 +50,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- maven -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.version>3.7.0</maven.compiler.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
         <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-        <maven.surefire.plugin.version>2.9</maven.surefire.plugin.version>
+        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.jacoco.plugin.version>0.8.1</maven.jacoco.plugin.version>
         <maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
-        <maven.javadoc.version>3.0.1</maven.javadoc.version>
+        <maven.javadoc.version>3.2.0</maven.javadoc.version>
         <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 
         <!-- spring -->
@@ -90,9 +90,9 @@
 
         <!-- test -->
         <junit.version>4.12</junit.version>
-        <mockito.version>1.10.19</mockito.version>
+        <mockito.version>2.23.4</mockito.version>
         <powermock.version>1.7.4</powermock.version>
-        <powermock.beta.version>2.0.0-beta.5</powermock.beta.version>
+        <powermock.beta.version>2.0.7</powermock.beta.version>
 
         <!-- logger -->
         <logback.version>1.2.3</logback.version>
@@ -117,7 +117,7 @@
         <commons.configuration2.version>2.2</commons.configuration2.version>
         <apache.httpcomponents.version>4.5.6</apache.httpcomponents.version>
         <guava.version>19.0</guava.version>
-        <lombok.version>1.16.18</lombok.version>
+        <lombok.version>1.18.8</lombok.version>
         <jsch.version>0.1.54</jsch.version>
         <sshd.version>1.4.0</sshd.version>
         <itextcore.version>7.1.0</itextcore.version>
@@ -143,8 +143,7 @@
         <apache.directory.api.version>2.0.0.AM2</apache.directory.api.version>
         <google.gson.version>2.8.4</google.gson.version>
         <googlecode.json-simple.version>1.1.1</googlecode.json-simple.version>
-        <powermock.module.junit4.version>2.0.0</powermock.module.junit4.version>
-        <powermock.api.mockito.version>2.0.2</powermock.api.mockito.version>
+        <powermock.beta.version>2.0.7</powermock.beta.version>
         <mockito.version>2.22.0</mockito.version>
         <io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
 
@@ -171,39 +170,7 @@
             <version>${jcl.to.slf4j.version}</version>
         </dependency>
     </dependencies>
-<!--    <profiles>
-        <profile>
-            <id>LOCAL</id>
-            <properties>
-                <sonar.host.url>
-                    http://104.215.158.154:9000
-                </sonar.host.url>
-                <sonar.login>90903e93f9e6f0e73b5352382e7c51e0a18bfa80</sonar.login>
-                <sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
-                <sonar.jacoco.reportPaths>
-                    target/jacoco.exec
-                </sonar.jacoco.reportPaths>
-            </properties>
-        </profile>
-        <profile>
-            <id>DEV</id>
-            <properties>
-                <sonar.host.url>
-                    http://104.215.158.154:9000
-                </sonar.host.url>
-                <sonar.login>90903e93f9e6f0e73b5352382e7c51e0a18bfa80</sonar.login>
-                <sonar.ws.timeout>90000</sonar.ws.timeout>
-                <sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
-                <sonar.jacoco.reportPaths>
-                    target/jacoco.exec
-                </sonar.jacoco.reportPaths>
-            </properties>
-        </profile>
-    </profiles>
--->
-    <build>
-        <pluginManagement>
-            <plugins>
+    <build> <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -211,14 +178,34 @@
                     <configuration>
                         <skip>false</skip>
                         <useFile>false</useFile>
+                        <argLine>
+							--illegal-access=permit
+						</argLine>
                     </configuration>
                 </plugin>
+                <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${maven.javadoc.version}</version>
+					<executions>
+						<execution>
+					 		<id>attach-javadocs</id>
+					  		<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+                        <doclint>none</doclint>
+                        <additionalJOption>-Xdoclint:none</additionalJOption>
+                	</configuration>
+               </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${maven.jacoco.plugin.version}</version>
                 </plugin>
-                <plugin>
+             <!--   <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
                     <version>${maven.sonar.plugin.version}</version>
@@ -230,16 +217,7 @@
                             </goals>
                         </execution>
                     </executions>
-                </plugin>
-                <!--             <plugin>
-                                 <groupId>org.apache.maven.plugins</groupId>
-                                 <artifactId>maven-javadoc-plugin</artifactId>
-                                 <version>${maven.javadoc.version}</version>
-                             </plugin>
-                -->
-            </plugins>
-        </pluginManagement>
-        <plugins>
+                </plugin>  -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -268,11 +246,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--          <plugin>
-                          <groupId>org.apache.maven.plugins</groupId>
-                          <artifactId>maven-javadoc-plugin</artifactId>
-                      </plugin>
-          -->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -333,23 +306,6 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <additionalJOption>-Xdoclint:none</additionalJOption>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.5</version>
                 <executions>
@@ -394,6 +350,15 @@
                     <!-- <format>json</format> -->
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
